--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "asciiart-logo": "^0.2.6",
         "dotenv": "^16.4.5",
         "inquirer": "^8.2.4",
-        "mysql2": "^2.1.0"
+        "mysql2": "^2.1.0",
+        "url": "^0.11.3"
     }
 }
