--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "asciiart-logo": "^0.2.6",
         "dotenv": "^16.4.5",
         "inquirer": "^8.2.4",
-        "mysql2": "^2.1.0",
-        "url": "^0.11.3"
+        "mysql2": "^2.1.0"
     }
 }
